# Friendly-Umm

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/FriendlyUmmCompiler/: CMakeLists.txt  README.md  main.cpp
cmake/: buildDoc.cmake
doxygen/: Doxyfile.in
include/: scanner.h
modules/CodeGenerator/: CMakeLists.txt  README.md
modules/CodeGenerator/include/: code_generator_sample.h
modules/CodeGenerator/src/: code_generator_sample.cpp
modules/CodeGenerator/test/: CMakeLists.txt  sample_test.cpp
modules/Common/: CMakeLists.txt
modules/Common/include/: token.h
modules/Common/src/: token.cpp
modules/Common/test/: CMakeLists.txt  token_test.cpp
modules/LogManager/: CMakeLists.txt  README.md
modules/LogManager/include/: log_manager.h
modules/LogManager/src/: log_manager.cpp
modules/LogManager/test/: CMakeLists.txt  log_manager_test.cpp
modules/Parser/: CMakeLists.txt  README.md
modules/Parser/include/: parser_sample.h
modules/Parser/src/: parser_sample.cpp
modules/Parser/test/: CMakeLists.txt  sample_test.cpp
modules/Scanner/: CMakeLists.txt  README.md
modules/Scanner/include/: scanner.h
modules/Scanner/src/: scanner.cpp
modules/Scanner/test/: CMakeLists.txt  sample_test.cpp  scanner_test.cpp
modules/Scanner/test/data/: input.frum
modules/SymbolTable/: CMakeLists.txt  README.md
modules/SymbolTable/include/: symbol_table_sample.h
modules/SymbolTable/src/: symbol_table_sample.cpp
modules/SymbolTable/test/: CMakeLists.txt  sample_test.cpp
src/: main.cpp  scanner.cpp
